--- a/src/css/_clear.scss
+++ b/src/css/_clear.scss
@@ -2,6 +2,9 @@
   padding: 0;
   margin: 0;
   border: 0;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 
   &::before, &::after {
     -moz-box-sizing: border-box;
