--- a/src/css/_clear.scss
+++ b/src/css/_clear.scss
@@ -26,13 +26,13 @@ nav, footer, header, aside {
 }
 
 html, body {
-  height: 100%;
-  width: 100%;
+  //height: 100%;
+  //width: 100%;
   line-height: 1;
   font-size: 14px;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
+  //-ms-text-size-adjust: 100%;
+  //-moz-text-size-adjust: 100%;
+  //-webkit-text-size-adjust: 100%;
 }
 
 input, button, textarea {
