--- a/src/css/_default_variables.scss
+++ b/src/css/_default_variables.scss
@@ -6,5 +6,7 @@ $card-bg-color: #222222;
 $card-border-color: #424242;
 $button-hover-bg-color: #f55353;
 $button-bg-color: #f44242;
+$error-color: #f44242;
+$error-bg-color: #562020;
 
 
