--- a/src/css/repositories.scss
+++ b/src/css/repositories.scss
@@ -5,6 +5,7 @@
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 20px;
   position: relative;
+  padding-bottom: 20px;
 
   &__item {
     display: flex;
